// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agents actions create agent 1`] = `
Array [
  Object {
    "resp": Immutable.Map {
      data: Immutable.Map {
            name: "Alex",
            email: "alex@gorgias.io",
            role: "agent",
      },
},
    "type": "CREATE_AGENT_SUCCESS",
  },
]
`;

exports[`agents actions delete agent 1`] = `
Array [
  Object {
    "id": 1,
    "resp": undefined,
    "type": "DELETE_AGENT_SUCCESS",
  },
]
`;

exports[`agents actions fetch agent 1`] = `
Array [
  Object {
    "id": 1,
    "resp": undefined,
    "type": "DELETE_AGENT_SUCCESS",
  },
]
`;

exports[`agents actions fetch agents 1`] = `
Array [
  Object {
    "resp": Immutable.Map {
      data: Immutable.List [
            Immutable.Map {
                  id: 1,
            },
      ],
},
    "type": "FETCH_AGENTS_PAGINATION_SUCCESS",
  },
]
`;

exports[`agents actions invite agent 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 404],
    "reason": "Failed to invite team member",
    "type": "INVITE_AGENT_ERROR",
  },
]
`;

exports[`agents actions update agent 1`] = `
Array [
  Object {
    "resp": Immutable.Map {
      data: Immutable.Map {
            id: 2,
            name: "Alex",
            email: "alex@gorgias.io",
            role: "agent",
      },
},
    "type": "UPDATE_AGENT_SUCCESS",
  },
]
`;
